--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
-"eventtypes" : ["action", "noaction"],
-"globaldataRepo" : "globaldataRepo",
+"classes" : ["PlayingDhol", "BenchPress"],
+"globaldataRepo" : "data",
 "sessionname" : "testsession",
 "featurefile" : "data_file.csv",
 "traintestsplit" : 70,
@@ -10,7 +10,12 @@
         "modality" : "video",
         "algorithm" : "lrcn",
         "sequencelength" : 40,
+        "maxframes": 300,
+        "loadtomemory" : 0,
+        "batchsize" : 32,
         "epochs" : 1000,
+        "learningrate" : 0.00001,
+        "decay"        : 0.000001,        
         "trainingfilelist" : "videofilelist-UCF.json"
     }
 ]
